--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.17.1"
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.13.3"
 	},
-	"description": ""
+	"description": "",
+	"devDependencies": {
+		"nodemon": "^2.0.12"
+	}
 }
