--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.13.3"
+		"express-jwt": "^6.0.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.13.3",
+		"nodemailer": "^6.6.3"
 	},
 	"description": "",
 	"devDependencies": {
