--- a/Dare4CharFrontend/package.json
+++ b/Dare4CharFrontend/package.json
@@ -24,6 +24,7 @@
     "firebase": "^8.8.0",
     "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.1.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
