--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"express-jwt": "^6.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.13.3",
-		"nodemailer": "^6.6.3"
+		"nodemailer": "^6.6.3",
+		"socket.io": "^4.1.3"
 	},
 	"description": "",
 	"devDependencies": {
