--- a/Dare4CharFrontend/package.json
+++ b/Dare4CharFrontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@piumaz/pull-to-refresh": "^2.1.0",
     "firebase": "^8.8.0",
     "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
